# 2d3danimation

./: .gitignore  CMakeLists.txt  CMakePresets.json  QTOpenGL.md  README.md  main.cpp  premultiplecation.md  qt.md
include/2D/: Brush.cpp  Brush.h  toonzPainterGL.cpp  toonzPainterGL.h  toonzRaster.cpp  toonzRaster.h  toonzRasterBrush.cpp  toonzRasterBrush.h  toonzRasterPixel.cpp  toonzRasterPixel.h  toonzShader.cpp  toonzShader.h  toonzTextureManager.cpp  toonzTextureManager.h
include/BrushWidget/: BrushWidget.cpp  BrushWidget.h
include/CanvasWidget/: CanvasWidget.cpp  CanvasWidget.h
include/shaders/: fs.txt  vs.txt  vsCanvas.txt  vsColorTriangle.txt
include/utility/: toonzCalculations.cpp  toonzCalculations.h  toonzGL.cpp  toonzGL.h  toonzGeometry.cpp  toonzGeometry.h  types.h
include/utilityUI/: UIPainter.cpp  UIPainter.h  UIShapes.h
tests/: test_main.cpp
